// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`harvestingMenu component should match harvestingMenu snapshot when extracts is undefined 1`] = `
<div>
  <div
    className="harvesting-container"
  />
</div>
`;

exports[`harvestingMenu component should match harvestingMenu snapshot when nugget action is visible 1`] = `
<div>
  <harvestingBadge
    extractsNumber={5}
    toggleExtractsBox={[Function]}
  />
  <div
    className="harvesting-container"
  />
</div>
`;

exports[`harvestingMenu component should match harvestingMenu snapshot when the anchor to harvest is visible 1`] = `
<div>
  <harvestingBadge
    extractsNumber={5}
    toggleExtractsBox={[Function]}
  />
  <div
    className="harvesting-container"
  >
    <HarvestingAnchor
      anchorPosition={
        Object {
          "x": 10,
          "y": 10,
        }
      }
      displayHarvestingBox={false}
      handleClickAnchor={[MockFunction]}
      handleMouseDown={[Function]}
    />
  </div>
</div>
`;

exports[`harvestingMenu component should match harvestingMenu snapshot when the author account is deleted 1`] = `
<div>
  <harvestingBadge
    extractsNumber={5}
    toggleExtractsBox={[Function]}
  />
  <div
    className="harvesting-container"
  />
</div>
`;

exports[`harvestingMenu component should match harvestingMenu snapshot when the harvesting box is visible 1`] = `
<div>
  <harvestingBadge
    extractsNumber={5}
    toggleExtractsBox={[Function]}
  />
  <div
    className="harvesting-container"
  >
    <Connect(Apollo(Apollo(Apollo(Apollo(Apollo(Component))))))
      cancelHarvesting={[MockFunction]}
      displayHarvestingBox={true}
      lang="fr"
      postId="123456"
      refetchPost={[MockFunction]}
      selection={
        Object {
          "removeAllRanges": [Function],
        }
      }
      setHarvestingBoxDisplay={[MockFunction]}
      showNuggetAction={false}
    />
  </div>
</div>
`;

exports[`harvestingMenu component should match harvestingMenu snapshot when there are extracts 1`] = `
<div>
  <harvestingBadge
    extractsNumber={5}
    toggleExtractsBox={[Function]}
  />
  <div
    className="harvesting-container"
  />
</div>
`;

exports[`harvestingMenu component should match harvestingMenu snapshot when there are no extracts 1`] = `
<div>
  <div
    className="harvesting-container"
  />
</div>
`;
